[project]
name = "pytest-limited-concurrency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "filelock>=3.19.1",
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
]


[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
